Add full coverage tests for `storage` package